--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,6 +1,6 @@
 ruby_version: 2.6.4
 ansible_user: ec2-user
-ansible_ssh_private_key_file: ~/.ssh/yuta-ushijima.pem
+ansible_ssh_private_key_file: ~/.ssh/aws-and-infra-ssh-key.pem
 git_src_archive_download_url: 'https://github.com/git/git/archive/master.zip'
 nginx_download_url: 'http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm'
 rbenv_download_url: 'https://github.com/sstephenson/rbenv.git'
@@ -13,4 +13,4 @@ backend_repository_name: web-ushizima
 rds_master_user_name: ''
 rds_master_user_password: ''
 rds_port: 3306
-DATABASE_HOST_STAGING: 'web-ushizima.123456.ap-northeast-1.rds.amazonaws.com'
+DATABASE_HOST_STAGING: 'aws-and-infra-db.coqfbtoplgam.ap-northeast-1.rds.amazonaws.com'
